<resources>
    <string name="app_name">ScrollView</string>
    <string name="name">Akash Roshan A 2047207</string>
    <string name="title">History of Christ University</string>
    <string name="history1">History 1</string>
    <string name="history2">History 2</string>
    <string name="article1">Established in 1969 as Christ College, it undertook path-breaking initiatives in Indian higher education with the introduction of innovative and modern curricula, insistence on academic discipline, imparting of Holistic Education and adoption of global higher education practices with the support of creative and dedicated staff. The University Grants Commission (UGC) of India conferred Autonomy to Christ College in 2004 and identified it as an Institution with Potential for Excellence in 2006. In 2008 under Section 3 of the UGC Act, 1956, the Ministry of Human Resource Development of the Government of India, declared the institution a Deemed to be University, in the name and style of Christ University. One of the first institutions in India to be accredited in 1998 by the NAAC, and subsequently in 2004 and 2016, CHRIST (Deemed to be University) has the top grade ‘A’ in the 4-point scale.</string>
    <string name="article2">The multi-disciplinary University which focuses on teaching research and service offers Bachelor, Master and Doctoral programmes in humanities, social sciences, science, commerce, management, engineering, education, and law to over 27000 students. The University offers its programmes at three campuses in Bangalore in Karnataka; Pune Lavasa in Maharashtra and Delhi NCR. The campus is a living example of harmonious multiculturalism with students from all the states and union territories and around 60 different countries. CHRIST (Deemed to be University) publishes six peer-reviewed research journals and has published more than 300 books in Kannada and English. A promoter of sports, music and literary activities, it is a nurturing ground for creative excellence.</string>
    <string name="button_label_toast">Toast</string>
    <string name="toast_message">Thank you for reading!</string>
</resources>